# clickbench-convert

./: .env.example  .gitignore  Cargo.toml  README.md  benchmark.sh  result-parquet.csv  result-vortex.csv  run.sh
src/: add_timestamp.rs  compressor.rs  main.rs  register_file_list.rs  to_vortex.rs
