[package]
name = "clickbench-convert"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
arrow = "57"
arrow-schema = { version = "57", features = ["serde"] }
parquet = "57"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
vortex = { version = "0.60.0", features = ["tokio"] }
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
serde_json = "1"
